[package]
name = "dump-slack-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.13", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_derive = "1.0.139"
serde_json = "1.0.82"
serde_with = { version = "2.0.0", features = ["chrono"] }
thiserror = "1.0.31"
